[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waveannotator"
version = "0.1.0"
description = "Acoustic analysis and annotation tool for speech waveforms"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "parselmouth>=0.4.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
waveannotator = "waveannotator.__main__:main"
